<resources>
    <string name="app_name">Clasificados Digital</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena_de_seguridad">Contraseña de Seguridad</string>
    <string name="nickname_usuario">Nickname/Usuario</string>
    <string name="numero_celular">Numero Celular</string>
    <string name="email">Email</string>
    <string name="nombre_y_apellidos">Nombre y Apellidos</string>
    <string name="nro_de_recomendacion">Nro de Recomendacion</string>
    <string name="recomendar_publicaciones">Recomendar Publicaciones</string>
    <string name="publicidad_nuevo_diario">Publicidad Nuevo Diario</string>
    <string name="plan_recompensas">Plan de Recompensas</string>
    <string name="listado_ediciones">Listado de Ediciones</string>
    <string name="title_activity_principal_menu">Principal_menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="password">Password</string>
    <string name="acceder">Acceder</string>
    <string name="title_activity_crear_cuenta_usuarios">Crear_cuenta_usuarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atencion_cliente">Atencion Al Cliente</string>
    <string name="asunto">Asuntos</string>
    <string name="observaciones">Observaciones</string>
    <string name="enviar">Enviar</string>
    <string name="info_lanzamiento">Informacion de Promocion x Lanzamiento</string>
    <string name="title_activity_la_edicion">La Edicion Seleccionada</string>
    <string name="title_activity_programar_consumo_diario">Programar_consumo_diario</string>
    <string name="title_activity_maps_buscador_direcciones">Buscador de Direcciones</string>
    <string name="title_activity_buscador_direcciones_maps">Mapa Buscar Direcciones</string>
    <string name="title_activity_video_pqherramientas_digitales">Video_pqherramientas_digitales
    </string>
    <string name="title_activity_programar_consumo_dvd">Programar_consumo_dvd</string>
    <string name="title_activity_detalle_de__servicios">Detalle_de_Servicios</string>
    <string name="title_activity_video_pago_pim">Video_pago_pim</string>
    <string name="title_activity_confirmar_pago_pim">Confirmar_pago_pim</string>
    <string name="title_activity_login__admin_web">Login_Admin_web</string>
    <string name="title_activity_olvide_mi_password">Olvide_mi_password</string>
    <string name="title_activity_interfaz_veinte_admin">Interfaz_veinte_admin</string>
    <string name="title_activity_recibido_los_dvd">Recibido_los_dvd</string>
    <string name="title_activity_alta_codigo_seguridad">Alta_codigo_seguridad</string>
    <string name="title_activity_confirmar_entrega_dvd">Confirmar_entrega_dvd</string>
    <string name="title_activity_video_publicidad_nuevo">Video_publicidad_nuevo</string>
    <string name="title_activity_video_plan_recompensa_red">Video_plan_recompensa_red</string>
    <string name="title_activity_pantalla_listado_ediciones">Pantalla_listado_ediciones</string>
    <string name="title_activity_pantalla_select_edicion">Pantalla_select_edicion</string>
    <string name="title_activity_pantalla_promocion_lanzamiento">Pantalla_promocion_lanzamiento
    </string>
    <string name="title_activity_atencion_al_cliente">Atencion_al_cliente</string>
    <string name="title_activity_msg_registro_usuario">Msg_registro_usuario</string>
    <string name="title_activity_publicaciones_en__diario__clasificados__digital">Publicaciones en
        Diario Clasificados Digital
    </string>
    <string name="title_activity_interfaz_veintiuno_admin">Interfaz_veintiuno_admin</string>
    <string name="title_activity_pantalla_inicio_sesion">Pantalla_inicio_sesion</string>
    <string name="title_activity_cambiar_nueva_contrasenna">Cambiar_nueva_contrasenna</string>
    <string name="title_activity_msg_contrasenna_cambiada">Msg_contrasenna_cambiada</string>
    <string name="title_activity_mapa_pt11_activar_gps">Mapa_pt11_activar_gps</string>
    <string name="title_activity_mapa__seguimiento_satelital_dvd">Mapa_Seguimiento_satelital_dvd
    </string>
    <string name="title_activity_msg_restablecer_contrasenna">Msg_restablecer_contrasenna</string>
    <string name="title_activity_video_view_example">Video_view_example</string>
    <string name="title_activity_mapa_example_buscador">Mapa_example_buscador</string>


    <string name="get_location">Get my location</string>
    <string name="address_text">"Address: %1$s"</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
