<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.solprob.yadierq87.consumidores.menu_parent_principal.Pt3_Crear_cuenta_usuarios"
    tools:showIn="@layout/activity_crear_cuenta_usuarios">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:weightSum="1"
            >

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nro_de_recomendacion"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/editTextNroRecomendacion"
                style="@style/inputWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_y_apellidos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/editTextNombreApellidos"
                style="@style/inputWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/editTextEmailUser"
                style="@style/inputWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_celular"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/editTextNumeroCelular"
                style="@style/inputWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname_usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/editTextNickname"
                style="@style/inputWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasena_de_seguridad"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/editTextPasswordUser"
                style="@style/inputWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.17"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_crearcuenta"
                style="@style/botonBlanco"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="20sp"
                android:onClick="onClickCreateNuevoUsuario"
                android:text="@string/crear_cuenta" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
